--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>User Dashboard | Kulunu</title>
   <link rel="stylesheet" href="style.css" />
+   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- ✅ Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
@@ -207,13 +208,6 @@
     background:var(--bg);
   }
 /* ===== Profile Card ===== */
-.profile-wrapper {
-  display: flex;        /* Side by side by default */
-  gap: 20px;
-  max-width: 1000px;
-  margin: 20px auto;
-  align-items: stretch;
-}
     .profile-card {
       background: white;
       border-radius: 12px;
@@ -278,15 +272,12 @@
 /* Co-travel Card */
 .co-travel-card {
   background: #fff;
-  padding: 20px;
+  padding: 8px;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  flex: 1;
   width: 250px;
-  flex-direction: column;
-  justify-content: space-between;
-  float: right;
-}
+  margin-top: 20px;
+  }
 
 .co-travel-header {
   display: flex;
@@ -655,6 +646,7 @@ p {
     }
   </script>
   <!-- Profile Card to Display User Details -->
+   <div class="d-flex flex-row justify-content-between">
 <div class="profile-card" id="profileDisplay">
   <div class="profile-header">
     <i class="bi bi-person-circle"></i>
@@ -667,7 +659,7 @@ p {
     <p>No profile information saved yet.</p>
   </div>
 </div>
-      </section>
+    
        <!-- Co-travel Card -->
   <div class="co-travel-card">
     <div class="co-travel-header">
@@ -677,6 +669,7 @@ p {
     <button class="co-travel-btn">
       <i class="bi bi-person-plus"></i> Add Co-traveler
     </button>
+  </div>
   </div>
       </section>
 <!-- ✅ Modal -->
