--- a/dashboard.html
+++ b/dashboard.html
@@ -8,616 +8,22 @@
    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- ✅ Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f6f9;
-    }
+   <!-- Favicons -->
+  <link href="assets/img/kulu.png" rel="icon">
+  <link href="assets/img/kulu.png" rel="apple-touch-icon">
 
-    .dashboard {
-      display: flex;
-      min-height: 100vh;
-    }
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    .sidebar {
-      width: 220px;
-      background-color: #0CA6EF;
-      color: white;
-      padding: 20px;
-    }
-
-    .sidebar h2 {
-      margin-bottom: 30px;
-      font-size: 22px;
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .sidebar ul li {
-      margin: 15px 0;
-      padding: 10px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: background 0.3s;
-      display: flex;
-      align-items: center;
-      gap: 10px; /* space between icon and text */
-    }
-    
-    .sidebar ul li i {
-      font-size: 18px;
-      width: 20px; /* keeps icons aligned */
-    }
-
-    .sidebar ul li:hover,
-    .sidebar ul li.active {
-      background-color: #0055aa;
-    }
-
-    .main-content {
-      flex: 1;
-      padding: 30px;
-    }
-
-    header h1 {
-      margin-bottom: 5px;
-    }
-
-    .summary {
-      display: flex;
-      gap: 20px;
-      margin: 30px 0;
-    }
-
-    .card {
-      background: white;
-      flex: 1;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .bookings h2 {
-      margin-bottom: 15px;
-    }
-
-    .booking-entry {
-      background: white;
-      padding: 15px;
-      margin-bottom: 10px;
-      border-left: 5px solid #0055aa;
-      border-radius: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .status {
-      padding: 5px 10px;
-      border-radius: 4px;
-      font-size: 14px;
-      color: white;
-    }
-
-    .status.confirmed {
-      background-color: green;
-    }
-
-    .status.completed {
-      background-color: gray;
-    }
-
-    .section {
-      display: none;
-    }
-
-    .section.active {
-      display: block;
-    }
-
-    @media (max-width: 768px) {
-      .dashboard {
-        flex-direction: column;
-      }
-
-      .sidebar {
-        width: 100%;
-        padding: 10px;
-      }
-
-      .sidebar h2 {
-        text-align: center;
-      }
-
-      .sidebar ul {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-      }
-
-      .sidebar ul li {
-        flex: 1 1 30%;
-        text-align: center;
-        padding: 10px 5px;
-      }
-
-      .main-content {
-        padding: 15px;
-      }
-
-      .summary {
-        flex-direction: column;
-      }
-    }
-    
-.frame {
-      border: 2px solid #ffffff;
-      padding: 5px;
-      background-color: white;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      max-width: 775px;
-      width: 800px;
-    }
-
-.widget-container {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      max-height: 70px;
-      padding-top: 10px;
-    }
-
-.search-box {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 2rem;
-  align-items: center;
-  }
-
-.search-box input, .search-box button {
-  padding: 0.75rem 1rem;
-  border: 2px solid #0CA6EF;
-  border-radius: 8px;
-  font-size: 1rem;
-  }
-
-.search-box button {
-  background: #0CA6EF;
-  color: white;
-  border: none;
-  cursor: pointer;
-  }
-:root{
-    --brand:#0CA6EF;
-    --ink:#0b2030;
-    --muted:#5b6b79;
-    --bg:#f4f6f9;
-    --card:#fff;
-    --radius:14px;
-  }
-  *{box-sizing:border-box}
-  body{
-    margin:0;
-    font-family:system-ui,-apple-system,"Segoe UI",Roboto,Inter,Ubuntu,"Helvetica Neue",Arial,sans-serif;
-    color:var(--ink);
-    background:var(--bg);
-  }
-/* ===== Profile Card ===== */
-    .profile-card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      width: 700px;
-      margin-top: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      position: relative;
-    }
-    .profile-header {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      margin-bottom: 20px;
-      position: relative;
-    }
-    .profile-header i {
-      font-size: 40px;
-      color: #0CA6EF;
-    }
-    .profile-details {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px 20px;
-    }
-    .detail {
-      background: #f1f5f9;
-      padding: 12px;
-      border-radius: 8px;
-    }
-    .detail strong {
-      display: block;
-      font-size: 13px;
-      color: #555;
-      margin-bottom: 4px;
-    }
-    .detail span {
-      font-size: 15px;
-      color: #0b2030;
-      font-weight: 500;
-    }
-
-.edit-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: #0CA6EF;
-  color: #fff;
-  border: none;
-  padding: 10px 30px;
-  font-size: 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  display: flex;
-  align-items: left;
-  gap: 60px;
-  transition: background 0.2s;
-}
-.edit-btn:hover {
-  background: #007cc2;
-}
-/* Co-travel Card */
-.co-travel-card {
-  background: #fff;
-  padding: 8px;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  width: 250px;
-  margin-top: 20px;
-  height: 600px;
-  }
-
-.co-travel-header {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.co-travel-btn {
-  background: #0CA6EF;
-  color: white;
-  border: none;
-  padding: 10px 14px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  transition: background 0.3s;
-}
-
-.co-travel-btn:hover {
-  background: #007acc;
-}
-
-#coTravelList {
-  list-style: none;
-  padding: 0;
-  margin-top: 10px;
-}
-
-#coTravelList li {
-  background: #f9f9f9;
-  padding: 10px;
-  border-radius: 6px;
-  margin-bottom: 8px;
-  font-size: 14px;
-  border-left: 4px solid #0055aa;
-}
-
-#coTravelList li strong {
-  color: #0CA6EF;
-}
-
-/* ✅ Responsive for mobile */
-@media (max-width: 768px) {
-  .profile-wrapper {
-    flex-direction: column;  /* Stack vertically */
-  }
-
-  .profile-card,
-  .co-travel-card {
-    width: 100%;             /* Full width */
-  }
-}
-
-
-  /* ✅ Modal Styles */
-    .modal {
-  display: none;
-  position: fixed;
-  top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.5);
-  align-items:center;
-  justify-content:center;
-  z-index:1000;
-}
-
-/* When we add .show via JS, it becomes visible */
-.modal.show {
-  display: flex;
-}
-
-.modal-content {
-  background:#fff;
-  padding:2px 25px;
-  border-radius:12px;
-  width:90%;
-  max-width:750px;
-  box-shadow:0 8px 25px rgba(0,0,0,0.2);
-}
-.modal-content h2 {
-  margin-bottom:1px;
-  display:flex;
-  align-items:center;
-  gap:10px;
-  font-size:20px;
-  color:#0CA6EF;
-}
-.grid-form {
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap: 5px 10px;
-}
-.field {
-  display:flex;
-  flex-direction:column;
-}
-.field label {
-  font-size:13px;
-  font-weight:600;
-  margin-bottom:5px;
-  color:#333;
-}
-.field input, .field select {
-  padding:10px;
-  border:1.5px solid #ddd;
-  border-radius:8px;
-  font-size:14px;
-  height: 42px;
-}
-.actions {
-  grid-column:span 2;
-  display:flex;
-  justify-content:flex-end;
-  gap:10px;
-  margin-top:5px;
-}
-.btn.primary {
-  background:#0CA6EF;
-  color:#fff;
-  border:none;
-  padding:10px 18px;
-  border-radius:8px;
-  cursor:pointer;
-}
-.btn.ghost {
-  background:#f1f5f9;
-  border:none;
-  padding:10px 18px;
-  border-radius:8px;
-  cursor:pointer;
-}
-p {
-    display: block;
-    margin-block-start: 0.5em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    unicode-bidi: isolate;
-}
-@media(max-width:640px){
-  .grid-form { grid-template-columns:1fr; }
-  .profile-details { grid-template-columns: 1fr; }
-}
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    } 
-
-  /* ===== Shell ===== */
-  .wrap{
-    max-width:1100px;
-    margin-inline:auto;
-    padding:clamp(16px, 2vw, 24px);
-  }
-  .page-title{
-    margin:4px 0 16px;
-    font-size:clamp(22px, 3.5vw, 32px);
-    font-weight:800;
-    letter-spacing:.2px;
-  }
-  .sub{
-    color:var(--muted);
-    margin:0 0 18px;
-    font-size:clamp(14px, 2.5vw, 16px);
-  }
-
-  /* ===== Lookup Card ===== */
-  .card{
-    background:var(--card);
-    border-radius:var(--radius);
-    box-shadow:0 10px 30px rgba(15,35,50,.08);
-    padding:16px;
-    margin-top: 20px;
-  }
-  .lookup{
-    display:grid;
-    gap:12px;
-  }
-  .lookup .row{
-    display:grid;
-    grid-template-columns:1fr;
-    gap:12px;
-  }
-  .field label{
-    display:block;
-    font-size:12px;
-    color:var(--muted);
-    margin:0 0 6px;
-  }
-  .field input{
-    width:100%;
-    border:2px solid rgba(12,166,239,.2);
-    border-radius:10px;
-    padding:12px 14px;
-    font-size:16px;
-    outline:none;
-    transition:border-color .2s ease, box-shadow .2s ease;
-    background:#fff;
-  }
-  .field input:focus{
-    border-color:var(--brand);
-    box-shadow:0 0 0 4px rgba(12,166,239,.12);
-  }
-  .actions{
-    display:flex;
-    gap:10px;
-    flex-wrap:wrap;
-  }
-  .btn{
-    appearance:none;
-    border:none;
-    border-radius:10px;
-    padding:12px 16px;
-    font-weight:600;
-    cursor:pointer;
-    transition:transform .05s ease, box-shadow .2s ease, background .2s ease;
-  }
-  .btn:active{ transform: translateY(1px) }
-  .btn.primary{
-    background:var(--brand);
-    color:#fff;
-    box-shadow:0 8px 20px rgba(12,166,239,.25);
-  }
-  .btn.ghost{
-    background:#eef7fe;
-    color:#0a4d6f;
-  }
-
-  /* ===== Tabs ===== */
-  .tabs{
-    display:flex;
-    gap:8px;
-    margin:18px 0 10px;
-    flex-wrap:wrap;
-  }
-  .tab{
-    padding:10px 14px;
-    border-radius:999px;
-    background:#e9f5fe;
-    color:#0a4d6f;
-    border:1px solid rgba(12,166,239,.18);
-    font-weight:600;
-    cursor:pointer;
-  }
-  .tab.active{
-    background:var(--brand);
-    color:#fff;
-    border-color:transparent;
-    box-shadow:0 6px 16px rgba(12,166,239,.28);
-  }
-
-  /* ===== Bookings Grid ===== */
-  .grid{
-    display:grid;
-    gap:14px;
-    margin-top:10px;
-  }
-  .booking{
-    background:var(--card);
-    border-radius:16px;
-    padding:16px;
-    border:1px solid rgba(10,32,48,.06);
-    display:grid;
-    gap:12px;
-  }
-  .booking-header{
-    display:flex;
-    align-items:center;
-    gap:10px;
-    justify-content:space-between;
-    flex-wrap:wrap;
-  }
-  .route{
-    font-weight:800;
-    font-size:18px;
-    letter-spacing:.2px;
-  }
-  .meta{
-    color:var(--muted);
-    font-size:14px;
-  }
-  .badge{
-    padding:6px 10px;
-    border-radius:999px;
-    font-size:12px;
-    font-weight:700;
-    background:#ecf8ff;
-    color:#0a4d6f;
-    border:1px solid rgba(12,166,239,.2);
-  }
-  .badge.upcoming{ background:#eafff1; color:#136b2e; border-color:rgba(24,164,78,.25) }
-  .badge.completed{ background:#f1f5f9; color:#475569; border-color:rgba(71,85,105,.2) }
-  .badge.cancelled{ background:#fff2f2; color:#b42318; border-color:rgba(244,63,94,.25) }
-
-  .booking-body{
-    display:grid;
-    gap:6px;
-    color:#0b2030;
-  }
-  .booking-actions{
-    display:flex;
-    gap:8px;
-    flex-wrap:wrap;
-  }
-  .btn.small{
-    padding:9px 12px;
-    font-size:14px;
-  }
-  .btn.gray{
-    background:#f3f6f9;
-    color:#0b2030;
-  }
-
-  /* ===== Empty State ===== */
-  .empty{
-    text-align:center;
-    color:var(--muted);
-    background:linear-gradient(180deg,#fff, #f7fbff);
-    border:1px dashed rgba(12,166,239,.25);
-    border-radius:16px;
-    padding:28px 16px;
-  }
-
-  /* ===== Responsive ===== */
-  @media (min-width:720px){
-    .card{ padding:20px 22px }
-    .lookup .row{ grid-template-columns:1fr 1fr 180px }
-    .booking{ padding:18px 20px }
-    .route{ font-size:20px }
-    .grid{ grid-template-columns:1fr 1fr }
-  }
-  @media (min-width:1024px){
-    .grid{ grid-template-columns:1fr 1fr 1fr }
-  }    
-  </style>
-</head>
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/dashboard.css" rel="stylesheet">
 <body>
   <div class="dashboard">
     <aside class="sidebar">
@@ -1071,19 +477,35 @@ function openModal(edit = false) {
     <h1 class="page-title">My Trips</h1>
     <p class="sub">Find and manage your bookings. Change dates, download invoices, or request a refund.</p>
     <!--- flight search dashboard --->
-<div class="frame">
-    <section class="widget-container">
-            <div class="search-box">
-    <input type="text" id="from" placeholder="From" />
-    <input type="text" id="to" placeholder="To" />
-    <input type="date" id="date" />
-    <button onclick="window.location.href='Result.html'">Search</button>
-            </div>
-    </section>
+    <div class="container">
+  <div class="search-panel">
+    <!-- Trip type selection -->
+    <div class="trip-types">
+      <label><input type="radio" name="tripType" value="oneway"> One Way</label>
+      <label><input type="radio" name="tripType" value="round" checked> Round Trip</label>
+      <label><input type="radio" name="tripType" value="multi"> Multicity</label>
+    </div>
+
+    <!-- Search fields -->
+    <div class="form-grid">
+      <div>
+        <label>From</label>
+        <input type="text" id="from" placeholder="Origin">
+      </div>
+      <div>
+        <label>To</label>
+        <input type="text" id="to" placeholder="Destination">
+      </div>
+      <div>
+        <label>Date</label>
+        <input type="date" id="date">
+      </div>
+      <div>
+        <button onclick="window.location.href='Result.html'">Search</button>
+      </div>
+    </div>
   </div>
-  <div class="results" id="results">
-    <!-- Search results go here -->
-  </div>
+</div>
 
   <script>
     const dummyFlights = [
