--- a/Result.html
+++ b/Result.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flight Results</title>
-  <!-- Favicons -->
   <link href="assets/img/kulu.png" rel="icon">
   <link href="assets/img/kulu.png" rel="apple-touch-icon">
   <link href="assets/css/Result.css" rel="stylesheet">
 </head>
 <body>
-
 <header>
   <div>Flight Results</div>
-  <a href="index.html">← Back to Dashboard</a>
+  <a href="index.html">← Back to Home</a>
 </header>
+
 <div class="filter-bar">
   <div class="filter-option active" data-filter="price">Price</div>
   <div class="filter-option" data-filter="rating">Rating</div>
@@ -26,85 +25,97 @@
 <div class="results" id="results"></div>
 
 <script>
-  const flights = [
-    { airline: 'Airpeace', from: 'Abuja', to: 'Lagos', time: '10:30 AM', price: 120000, rating: 4.0, weather: 'Clear' },
-    { airline: 'Ibom Air', from: 'Abuja', to: 'Lagos', time: '1:00 PM', price: 110000, rating: 4.7, weather: 'Rainy' },
-    { airline: 'Flyaero', from: 'Abuja', to: 'Lagos', time: '3:45 PM', price: 95000, rating: 4.2, weather: 'Cloudy' },
-  ];
+const flights = [
+  { airline: 'Airpeace', from: 'Abuja', to: 'Lagos', time: '10:30 AM', price: 120000, rating: 4.0, weather: 'Clear', logo: 'assets/img/airpeace.svg' },
+  { airline: 'Ibom Air', from: 'Abuja', to: 'Lagos', time: '1:00 PM', price: 110000, rating: 4.7, weather: 'Rainy', logo: 'assets/img/ibom-air-logo.png' },
+  { airline: 'Flyaero', from: 'Abuja', to: 'Lagos', time: '3:45 PM', price: 95000, rating: 4.2, weather: 'Cloudy', logo: 'assets/img/fly aero.png' },
+];
 
-  const indicator = document.querySelector('.indicator');
-  const options = document.querySelectorAll('.filter-option');
-  const results = document.getElementById('results');
+const indicator = document.querySelector('.indicator');
+const options = document.querySelectorAll('.filter-option');
+const results = document.getElementById('results');
 
-  function renderFlights(data) {
-    results.innerHTML = '';
-    data.forEach(flight => {
-      const div = document.createElement('div');
-      div.className = 'ticket';
-
-      // Airline booking links
-      let bookingURL = '#';
-    let logoURL = '';
-    if (flight.airline === 'Airpeace') {
-      bookingURL = 'login.html';
-      logoURL = 'assets/img/airpeace.svg';
-    }
-    if (flight.airline === 'Ibom Air') {
-      bookingURL = 'login.html';
-      logoURL = 'assets/img/ibom-air-logo.png';
-    }
-    if (flight.airline === 'Flyaero') {
-      bookingURL = 'login.html';
-      logoURL = 'assets/img/fly aero.png';
-    }
-
-      div.innerHTML = `
+// Render flights
+function renderFlights(data) {
+  results.innerHTML = '';
+  data.forEach(flight => {
+    const div = document.createElement('div');
+    div.className = 'ticket';
+    div.innerHTML = `
       <div class="airline-header">
-        <img src="${logoURL}" alt="${flight.airline} logo" class="airline-logo">
+        <img src="${flight.logo}" alt="${flight.airline} logo" class="airline-logo">
         <h3>${flight.airline}</h3>
       </div>
       <p><strong>From:</strong> ${flight.from}</p>
       <p><strong>To:</strong> ${flight.to}</p>
       <div class="flight-info-row">
         <p>🕒 <strong>Time:</strong> ${flight.time}</p>
-        <p>💰 <strong>Price:</strong> ₦${flight.price}</p>
+        <p>💰 <strong>Price:</strong> ₦${flight.price.toLocaleString()}</p>
         <p>⭐ <strong>Rating:</strong> ${flight.rating}</p>
         <p>🌤️ <strong>Weather:</strong> ${flight.weather}</p>
       </div>
-      <a href="${bookingURL}" class="buy-button">Book Now</a>
+      <button class="buy-button" onclick="window.location.href='login.html'">Book Now</button>
     `;
     results.appendChild(div);
   });
 }
 
-  function moveIndicator(target) {
-    indicator.style.width = `${target.offsetWidth}px`;
-    indicator.style.left = `${target.offsetLeft}px`;
-  }
+// Sorting indicator
+function moveIndicator(target) {
+  indicator.style.width = `${target.offsetWidth}px`;
+  indicator.style.left = `${target.offsetLeft}px`;
+}
 
-  options.forEach(option => {
-    option.addEventListener('click', () => {
-      options.forEach(opt => opt.classList.remove('active'));
-      option.classList.add('active');
-      moveIndicator(option);
+options.forEach(option => {
+  option.addEventListener('click', () => {
+    options.forEach(opt => opt.classList.remove('active'));
+    option.classList.add('active');
+    moveIndicator(option);
 
-      const criteria = option.dataset.filter;
-      const sorted = [...flights];
-      if (criteria === 'price') sorted.sort((a, b) => a.price - b.price);
-      if (criteria === 'rating') sorted.sort((a, b) => b.rating - a.rating);
-      if (criteria === 'weather') sorted.sort((a, b) => a.weather.localeCompare(b.weather));
-      if (criteria === 'time') sorted.sort((a, b) => new Date('1970/01/01 ' + a.time) - new Date('1970/01/01 ' + b.time));
+    const criteria = option.dataset.filter;
+    const sorted = [...flights];
+    if (criteria === 'price') sorted.sort((a, b) => a.price - b.price);
+    if (criteria === 'rating') sorted.sort((a, b) => b.rating - a.rating);
+    if (criteria === 'weather') sorted.sort((a, b) => a.weather.localeCompare(b.weather));
+    if (criteria === 'time') sorted.sort((a, b) => new Date('1970/01/01 ' + a.time) - new Date('1970/01/01 ' + b.time));
 
-      renderFlights(sorted);
-    });
+    renderFlights(sorted);
   });
+});
 
-  window.onload = () => {
-    moveIndicator(document.querySelector('.filter-option.active'));
-    renderFlights(flights);
+window.onload = () => {
+  moveIndicator(document.querySelector('.filter-option.active'));
+  renderFlights(flights);
+};
+
+// ✅ Book flight function
+function bookFlight(flight) {
+  const primary = JSON.parse(localStorage.getItem("primaryTraveler"));
+  const coTravelers = JSON.parse(localStorage.getItem("coTravelers")) || [];
+
+  // Build passengers array
+  let passengers = [];
+  if (primary) passengers.push(primary);
+  passengers = passengers.concat(coTravelers);
+
+  // Booking data
+  const bookingData = {
+    travelInfo: {
+      from: flight.from,
+      to: flight.to,
+      date: new Date().toISOString().split("T")[0],
+      time: flight.time,
+      cabin: "Economy",
+      price: flight.price,
+      airline: flight.airline,
+      logo: flight.logo
+    },
+    passengers
   };
+
+  localStorage.setItem("bookingData", JSON.stringify(bookingData));
+  window.location.href = "confirm.html";
+}
 </script>
-
-
 </body>
 </html>
