--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,8 @@
    <!-- ✅ Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
    <!-- Favicons -->
-  <link href="assets/img/kulu.png" rel="icon">
-  <link href="assets/img/kulu.png" rel="apple-touch-icon">
+  <link href="assets/img/ku.png" rel="icon">
+  <link href="assets/img/ku.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
