--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/kulu.png" rel="icon">
-  <link href="assets/img/kulu.png" rel="apple-touch-icon">
+  <link href="assets/img/ku.png" rel="icon">
+  <link href="assets/img/ku.png" rel="apple-touch-icon">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
