--- a/pro.html
+++ b/pro.html
@@ -25,7 +25,8 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">  
+  <link href="assets/css/main.css" rel="stylesheet"> 
+  
 </head>
 
 <body class="index-page">
@@ -41,8 +42,8 @@
           <img src="assets/img/ku.png" alt="KULUNU"> 
         </a>
         <div>
-<a href ="login.html" style="color: white; font-size: small;"><i class="bi bi-person"></i>My account</a>
-        </div>
+            <button class="account-btn" id="openLoginModal"><i class="bi bi-person"></i>My Account</button>
+       </div>
       </div>
 
     </div>
@@ -799,6 +800,118 @@ any time. Your privacy & personal information will be treated.</p>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+<!-- Add this before closing </body> -->
+<!-- Modal Overlay -->
+<div class="modal-overlay" id="loginModal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeLoginModal">&times;</span>
+
+    <div class="tabs">
+      <button class="tab-btn active" id="loginTab">Login</button>
+      <button class="tab-btn" id="signupTab">Sign Up</button>
+    </div>
+
+    <!-- Login Form -->
+    <form class="login-form form active" id="loginForm">
+      <h2>Welcome Back</h2>
+      <p class="subtitle">Login to continue</p>
+      <div class="input-group">
+        <input type="email" placeholder="Email" required>
+      </div>
+      <div class="input-group">
+        <input type="password" placeholder="Password" required>
+      </div>
+      <button type="submit" class="login-btn" onclick="window.location.href='dashboard.html'">Login</button>
+
+      <div class="divider"><span>or</span></div>
+
+      <button class="google-btn" type="button">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Logo">
+        Continue with Google
+      </button>
+
+      <p class="signup-link">Don’t have an account? <a href="#" id="toSignup">Sign up</a></p>
+    </form>
+
+    <!-- Signup Form -->
+    <form class="signup-form form" id="signupForm">
+      <h2>Create Account</h2>
+      <p class="subtitle">Sign up to get started</p>
+      <div class="input-group">
+        <input type="text" placeholder="Full Name" required>
+      </div>
+      <div class="input-group">
+        <input type="email" placeholder="Email" required>
+      </div>
+      <div class="input-group">
+        <input type="password" placeholder="Password" required>
+      </div>
+      <button type="submit" class="login-btn"onclick="window.location.href='dashboard.html'">Sign Up</button>
+
+      <div class="divider"><span>or</span></div>
+
+      <button class="google-btn" type="button">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Logo">
+        Continue with Google
+      </button>
+
+      <p class="signup-link">Already have an account? <a href="#" id="toLogin">Login</a></p>
+    </form>
+  </div>
+</div>
+
+<script>
+  const modal = document.getElementById('loginModal');
+  const openBtn = document.getElementById('openLoginModal');
+  const closeBtn = document.getElementById('closeLoginModal');
+
+  const loginForm = document.getElementById('loginForm');
+  const signupForm = document.getElementById('signupForm');
+  const loginTab = document.getElementById('loginTab');
+  const signupTab = document.getElementById('signupTab');
+
+  const toSignup = document.getElementById('toSignup');
+  const toLogin = document.getElementById('toLogin');
+
+  // Open Modal
+  openBtn.addEventListener('click', () => {
+    modal.style.display = 'flex';
+  });
+
+  // Close Modal
+  closeBtn.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  window.addEventListener('click', (e) => {
+    if (e.target === modal) modal.style.display = 'none';
+  });
+
+  // Toggle Forms
+  loginTab.addEventListener('click', () => {
+    loginTab.classList.add('active');
+    signupTab.classList.remove('active');
+    loginForm.classList.add('active');
+    signupForm.classList.remove('active');
+  });
+
+  signupTab.addEventListener('click', () => {
+    signupTab.classList.add('active');
+    loginTab.classList.remove('active');
+    signupForm.classList.add('active');
+    loginForm.classList.remove('active');
+  });
+
+  toSignup.addEventListener('click', (e) => {
+    e.preventDefault();
+    signupTab.click();
+  });
+
+  toLogin.addEventListener('click', (e) => {
+    e.preventDefault();
+    loginTab.click();
+  });
+</script>
 
 </body>
 
