--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <button class="account-btn" id="openLoginModal"><i class="bi bi-person"></i>My Account</button>
        </div>
       </div>
-
-    </div>
+   </div>
+   
 
   </header>
 
@@ -821,7 +821,7 @@ any time. Your privacy & personal information will be treated.</p>
       <div class="input-group">
         <input type="password" placeholder="Password" required>
       </div>
-      <button type="submit" class="login-btn" onclick="window.location.href='dashboard.html'">Login</button>
+      <button type="submit" class="login-btn" onclick="window.location.href='Authentication.html'">Login</button>
 
       <div class="divider"><span>or</span></div>
 
@@ -846,7 +846,7 @@ any time. Your privacy & personal information will be treated.</p>
       <div class="input-group">
         <input type="password" placeholder="Password" required>
       </div>
-      <button type="submit" class="login-btn"onclick="window.location.href='dashboard.html'">Sign Up</button>
+      <button type="submit" class="login-btn"onclick="window.location.href='Authentication.html'">Sign Up</button>
 
       <div class="divider"><span>or</span></div>
 
