--- a/Result.html
+++ b/Result.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flight Results</title>
-  <link href="assets/img/kulu.png" rel="icon">
-  <link href="assets/img/kulu.png" rel="apple-touch-icon">
+  <link href="assets/img/ku.png" rel="icon">
+  <link href="assets/img/ku.png" rel="apple-touch-icon">
   <link href="assets/css/Result.css" rel="stylesheet">
 </head>
 <body>
@@ -15,16 +15,75 @@
 </header>
 
 <div class="filter-bar">
-  <div class="filter-option active" data-filter="price">Price</div>
+  <div class="filter-option active" data-filter="price">Cheapest</div>
   <div class="filter-option" data-filter="rating">Rating</div>
   <div class="filter-option" data-filter="weather">Weather</div>
-  <div class="filter-option" data-filter="time">Flight Time</div>
+  <div class="filter-option" data-filter="time">Time</div>
   <div class="indicator"></div>
 </div>
 
 <div class="results" id="results"></div>
 
+<!-- Include Login Modal -->
+<div class="modal-overlay" id="loginModal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeLoginModal">&times;</span>
+
+    <div class="tabs">
+      <button class="tab-btn active" id="loginTab">Login</button>
+      <button class="tab-btn" id="signupTab">Sign Up</button>
+    </div>
+
+    <!-- Login Form -->
+    <form class="login-form form active" id="loginForm">
+      <h2>Welcome Back</h2>
+      <p class="subtitle">Login to continue</p>
+      <div class="input-group">
+        <input id="loginEmail" type="email" placeholder="Email" required>
+      </div>
+      <div class="input-group">
+        <input id="loginPassword" type="password" placeholder="Password" required>
+      </div>
+      <button type="submit" class="login-btn" onclick="window.location.href='Authentication.html'">Login</button>
+
+      <div class="divider"><span>or</span></div>
+
+      <button class="google-btn" type="button">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Logo">
+        Continue with Google
+      </button>
+
+      <p class="signup-link">Don’t have an account? <a href="#" id="toSignup">Sign up</a></p>
+    </form>
+
+    <!-- Signup Form -->
+    <form class="signup-form form" id="signupForm">
+      <h2>Create Account</h2>
+      <p class="subtitle">Sign up to get started</p>
+      <div class="input-group">
+        <input id="signupName" type="text" placeholder="Full Name" required>
+      </div>
+      <div class="input-group">
+        <input id="signupEmail" type="email" placeholder="Email" required>
+      </div>
+      <div class="input-group">
+        <input id="signupPassword" type="password" placeholder="Password" required>
+      </div>
+      <button type="submit" class="login-btn" onclick="window.location.href='Authentication.html'">Sign Up</button>
+
+      <div class="divider"><span>or</span></div>
+
+      <button class="google-btn" type="button">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Logo">
+        Continue with Google
+      </button>
+
+      <p class="signup-link">Already have an account? <a href="#" id="toLogin">Login</a></p>
+    </form>
+  </div>
+</div>
 <script>
+// ====== Flight Data ======
 const flights = [
   { airline: 'Airpeace', from: 'Abuja', to: 'Lagos', time: '10:30 AM', price: 120000, rating: 4.0, weather: 'Clear', logo: 'assets/img/airpeace.svg' },
   { airline: 'Ibom Air', from: 'Abuja', to: 'Lagos', time: '1:00 PM', price: 110000, rating: 4.7, weather: 'Rainy', logo: 'assets/img/ibom-air-logo.png' },
@@ -34,8 +93,10 @@ const flights = [
 const indicator = document.querySelector('.indicator');
 const options = document.querySelectorAll('.filter-option');
 const results = document.getElementById('results');
+const modal = document.getElementById('loginModal');
+const closeBtn = document.getElementById('closeLoginModal');
 
-// Render flights
+// ====== Render Flights ======
 function renderFlights(data) {
   results.innerHTML = '';
   data.forEach(flight => {
@@ -54,13 +115,29 @@ function renderFlights(data) {
         <p>⭐ <strong>Rating:</strong> ${flight.rating}</p>
         <p>🌤️ <strong>Weather:</strong> ${flight.weather}</p>
       </div>
-      <button class="buy-button" onclick="window.location.href='login.html'">Book Now</button>
+      <button class="buy-button" data-airline="${flight.airline}">Book Now</button>
     `;
     results.appendChild(div);
   });
+
+  // Attach "Book Now" button events after rendering
+  document.querySelectorAll('.buy-button').forEach(btn => {
+    btn.addEventListener('click', () => handleBookNow(btn.dataset.airline));
+  });
 }
 
-// Sorting indicator
+// ====== Handle Book Now ======
+function handleBookNow(airline) {
+  const isLoggedIn = localStorage.getItem('userLoggedIn');
+
+  if (isLoggedIn) {
+    window.location.href = "confirm.html";
+  } else {
+    modal.style.display = "flex"; // Show login modal
+  }
+}
+
+// ====== Sorting Filter ======
 function moveIndicator(target) {
   indicator.style.width = `${target.offsetWidth}px`;
   indicator.style.left = `${target.offsetLeft}px`;
@@ -83,39 +160,49 @@ options.forEach(option => {
   });
 });
 
+// ====== Modal Controls ======
+closeBtn.addEventListener('click', () => modal.style.display = 'none');
+window.addEventListener('click', e => { if (e.target === modal) modal.style.display = 'none'; });
+
+// ====== Tab Switching (Login / Signup) ======
+document.getElementById('loginTab').addEventListener('click', () => {
+  document.getElementById('loginForm').classList.add('active');
+  document.getElementById('signupForm').classList.remove('active');
+  document.getElementById('loginTab').classList.add('active');
+  document.getElementById('signupTab').classList.remove('active');
+});
+
+document.getElementById('signupTab').addEventListener('click', () => {
+  document.getElementById('signupForm').classList.add('active');
+  document.getElementById('loginForm').classList.remove('active');
+  document.getElementById('signupTab').classList.add('active');
+  document.getElementById('loginTab').classList.remove('active');
+});
+
+document.getElementById('toSignup').addEventListener('click', e => {
+  e.preventDefault();
+  document.getElementById('signupTab').click();
+});
+
+document.getElementById('toLogin').addEventListener('click', e => {
+  e.preventDefault();
+  document.getElementById('loginTab').click();
+});
+
+// ====== Fake Login Simulation ======
+document.getElementById('loginForm').addEventListener('submit', e => {
+  e.preventDefault();
+  localStorage.setItem('userLoggedIn', true);
+  modal.style.display = 'none';
+  alert('✅ Login successful! You can now book flights.');
+});
+
+// ====== Init ======
 window.onload = () => {
   moveIndicator(document.querySelector('.filter-option.active'));
   renderFlights(flights);
 };
-
-// ✅ Book flight function
-function bookFlight(flight) {
-  const primary = JSON.parse(localStorage.getItem("primaryTraveler"));
-  const coTravelers = JSON.parse(localStorage.getItem("coTravelers")) || [];
-
-  // Build passengers array
-  let passengers = [];
-  if (primary) passengers.push(primary);
-  passengers = passengers.concat(coTravelers);
-
-  // Booking data
-  const bookingData = {
-    travelInfo: {
-      from: flight.from,
-      to: flight.to,
-      date: new Date().toISOString().split("T")[0],
-      time: flight.time,
-      cabin: "Economy",
-      price: flight.price,
-      airline: flight.airline,
-      logo: flight.logo
-    },
-    passengers
-  };
-
-  localStorage.setItem("bookingData", JSON.stringify(bookingData));
-  window.location.href = "confirm.html";
-}
 </script>
+
 </body>
 </html>
