--- a/Result.html
+++ b/Result.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Flight Results</title>
   <link href="assets/img/ku.png" rel="icon">
   <link href="assets/img/ku.png" rel="apple-touch-icon">
