--- a/Result.html
+++ b/Result.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Flight Results</title>
   <link href="assets/img/ku.png" rel="icon">
   <link href="assets/img/ku.png" rel="apple-touch-icon">
