--- a/Booking.html
+++ b/Booking.html
@@ -19,7 +19,7 @@
   <div class="filter-option active" data-filter="price">Price</div>
   <div class="filter-option" data-filter="rating">Rating</div>
   <div class="filter-option" data-filter="weather">Weather</div>
-  <div class="filter-option" data-filter="time">Flight Time</div>
+  <div class="filter-option" data-filter="time">Time</div>
   <div class="indicator"></div>
 </div>
 
