update: auth functionalities

--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
         <h4 id="error"></h4>
 
         <button type="submit" class="login-btn">Login</button>
-
+        <p class="signup-link"> <a href="#" id="toLogin">Forgot Password?</a></p>
         <div class="divider"><span>or</span></div>
 
         <button class="google-btn" type="button">
@@ -903,15 +903,15 @@
         <h2>Create Account</h2>
         <p class="subtitle">Sign up to get started</p>
         <div class="input-group">
-          <input type="text" placeholder="Full Name" required>
+          <input type="text" placeholder="Full Name" id="fullnamesignup" required>
         </div>
         <div class="input-group">
-          <input type="email" placeholder="Email" required>
+          <input type="email" placeholder="Email" id="emailsignup" required>
         </div>
         <div class="input-group">
-          <input type="password" placeholder="Password" required>
+          <input type="password" placeholder="Password" id="passwordsignup" required>
         </div>
-        <button type="submit" class="login-btn" onclick="window.location.href='Authentication.html'">Sign Up</button>
+        <button type="submit" class="login-btn">Sign Up</button>
 
         <div class="divider"><span>or</span></div>
 
