update: booking fixes

--- a/index.html
+++ b/index.html
@@ -86,16 +86,27 @@
           <button class="filter-btn" data-type="multi">Multi-City</button>
         </div>
         <form class="search-grid" role="search" onsubmit="event.preventDefault();">
-          <input placeholder="From (e.g. LOS)">
-          <input placeholder="To (e.g. ABV)">
+          <div class="autocomplete">
+            <input id="departure" placeholder="From (e.g. LOS)" autocomplete="off">
+            <div id="departure-dropdown" class="dropdown"></div>
+          </div>
+
+          <div class="autocomplete">
+            <input id="arrival" placeholder="To (e.g. ABV)" autocomplete="off">
+            <div id="arrival-dropdown" class="dropdown"></div>
+          </div>
+
           <input type="date" class="small">
           <input type="date" class="small return">
+
           <select class="small">
-            <option>1 Adult</option>
-            <option>2 Adults</option>
+            <option value="1">1 Adult</option>
+            <option value="2">2 Adults</option>
           </select>
-          <button class="search-btn" onclick="window.location.href='Result.html'">Search Flights</button>
+
+          <button class="search-btn">Search Flights</button>
         </form>
+
       </div>
 
       <!-- ROAD -->
@@ -195,6 +206,9 @@
         </div>
       </div>
     </section>
+
+    <div id="flightsList"></div>
+    <div id="errorDiv" class="d-none"></div>
 
 
     <!-- Featured Services Section -->
@@ -980,6 +994,7 @@
 
   </script>
   <script src="./core/auth.js"></script>
+  <script src="./core/booking.js"></script>
 
 </body>
 
