--- a/Confirm.html
+++ b/Confirm.html
@@ -14,7 +14,7 @@
 
 <header>
   <h1>Review & Confirm</h1>
-  <a href="Booking.html">← Back</a>
+  <a href="dashboard.html">← Back</a>
 </header>
 
 <main class="container">
