--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
       </div>
       <div class="image-block">
-        <img src="assets/img/iPhone 13 Pro.png"
+        <img src="assets/img/Mobile app.png"
              alt="Kulunu App on mobile" class="app-mockup">
       </div>
     </div>
