--- a/Ticket.html
+++ b/Ticket.html
@@ -17,6 +17,8 @@
      <!-- Main CSS File -->
   <link href="assets/css/Ticket.css" rel="stylesheet"> 
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 </head>
     <!-- MAIN SECTIONS -->
 <header>
@@ -90,47 +92,49 @@
 </section>
     </section>
 
-    <section class="categories-section">
+
+<section class="categories-section">
     <h2>Categories</h2>
 
     <div class="categories-scroll">
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Concert.html')">
             <i class="ri-music-2-fill"></i>
             <span>Concerts</span>
         </div>
+        
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Sports.html')">
             <i class="ri-football-fill"></i>
             <span>Sports</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Comedy.html')">
             <i class="ri-mic-fill"></i>
             <span>Comedy</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Movies.html')">
             <i class="ri-movie-2-fill"></i>
             <span>Movies</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Festivals.html')">
             <i class="ri-map-pin-fill"></i>
             <span>Festivals</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Tech.html')">
             <i class="ri-computer-fill"></i>
             <span>Tech</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Coummunity.html')">
             <i class="ri-community-fill"></i>
             <span>Community</span>
         </div>
 
-        <div class="category-item">
+        <div class="category-item" onclick="goTo('Education.html')">
             <i class="ri-graduation-cap-fill"></i>
             <span>Education</span>
         </div>
@@ -747,9 +751,63 @@ $('#txFilter').addEventListener('input', ()=>{
 </div>
 
 <div id="menuPage" class="page-section">
-    <h2>Menu Page</h2>
-    <p>Profile, settings, support...</p>
+  <div class="menu-page">
+    <div class="menu-grid">
+
+      <div class="menu-card" onclick="goTo('tickets.html')">
+        <div class="icon">
+          <i class="bi bi-ticket-perforated"></i>
+        </div>
+        <div class="text">
+          <h4>My Ticketry</h4>
+          <p>View your tickets history</p>
+        </div>
+      </div>
+
+      <div class="menu-card" onclick="goTo('Event.html')">
+        <div class="icon">
+          <i class="bi bi-calendar-event"></i>
+        </div>
+        <div class="text">
+          <h4>Manage Event</h4>
+          <p>Create & distribute tickets</p>
+        </div>
+      </div>
+
+      <div class="menu-card" onclick="goTo('settings.html')">
+        <div class="icon">
+          <i class="bi bi-gear"></i>
+        </div>
+        <div class="text">
+          <h4>Settings</h4>
+          <p>Preferences & security</p>
+        </div>
+      </div>
+
+      <div class="menu-card" onclick="goTo('terms.html')">
+        <div class="icon">
+          <i class="bi bi-file-earmark-text"></i>
+        </div>
+        <div class="text">
+          <h4>Terms & Conditions</h4>
+          <p>Legal information</p>
+        </div>
+      </div>
+
+      <div class="menu-card logout" onclick="logout()">
+        <div class="icon">
+          <i class="bi bi-box-arrow-right"></i>
+        </div>
+        <div class="text">
+          <h4>Log Out</h4>
+          <p>Sign out of your account</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
+
 
 <!-- DOCK NAVIGATION -->
 <div class="dock">
@@ -903,6 +961,31 @@ setInterval(() => {
 dots.forEach((dot, index) => {
   dot.addEventListener("click", () => moveToSlide(index));
 });
+
+function goTo(page) {
+  window.location.href = page;
+}
+
 </script>
+
+<script>
+function openPage(pageId) {
+  document.querySelectorAll(".page").forEach(page => {
+    page.classList.remove("active");
+  });
+
+  document.getElementById(pageId).classList.add("active");
+}
+
+function goBack() {
+  document.querySelectorAll(".page").forEach(page => {
+    page.classList.remove("active");
+  });
+
+  document.getElementById("categoriesPage").classList.add("active");
+}
+</script>
+
+
 </body>
 </html>
