--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </button>
      
       <button class="tab-btn" data-target="eticket">
-        <i class="bi bi-ticket-perforated"></i> E-Ticket
+        <i class="bi bi-ticket-perforated"></i> Event
       </button>
     </div>
 
