--- a/Authentication.html
+++ b/Authentication.html
@@ -180,7 +180,7 @@
         <i class="bi bi-car-front"></i> Road Trip
       </button>
       <button class="tab-btn" data-target="eticket">
-        <i class="bi bi-ticket-perforated"></i> E-Ticket
+        <i class="bi bi-ticket-perforated"></i> Event
       </button>
     </div>
 
